# autopilot-cli

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml  release-please-config.json
.claude/: knowledge  memory.db
.claude-flow/: CAPABILITIES.md  agents.json  config.yaml  daemon-state.json
.claude-flow/hive-mind/: state.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/plugins/: installed.json  package-lock.json  package.json
.claude-flow/security/: audit-status.json
.github/workflows/: ci.yml  release.yml
.swarm/: schema.sql  state.json
docs/ADR/: ADR-011-workspace-isolation.md
docs/agents/: debugging-agent.md
docs/development-standards/: adr-pydantic-settings.md  modular-development-workflow.md  python-dev-standards.md  testing-and-config-patterns.md
docs/discovery/: hive-mind-orchestration.md  index.md
docs/ideation/: PRD.md  RFC.md  autopilot-debugging-agent-discovery.md  autopilot-uat-discovery.md  debugging-agent-plugin-architecture-discovery.md  desktop-agent-uat-discovery.md  devops-agent-discovery.md  discovery.md  uat-ux-notes.md  ux-design.md  workspace-isolation-discovery.md
src/autopilot/: __init__.py  __main__.py  logging.py
tasks/: tasks-1.md  tasks-10.md  tasks-11.1.md  tasks-11.2.md  tasks-2.md  tasks-3.md  tasks-4.md  tasks-5.md  tasks-6.md  tasks-7.md  tasks-8.md  tasks-9.md  tasks-index.md
tasks/core-build/: tasks-10.md  tasks-11.1.md  tasks-2.md  tasks-6.md  tasks-7.md
tasks/debugging-agent-plugin-architecture/: tasks-1.1.md  tasks-1.2.md  tasks-2.1.md  tasks-2.2.md  tasks-index.md
tasks/hive-mind-orchestration/: tasks-1.md  tasks-2.1.md  tasks-2.2.md  tasks-index.md
templates/hive-objective/: _template.yaml
templates/python/: config.yaml.j2
templates/typescript/: config.yaml.j2
tests/: conftest.py  test_logging.py
tests/cli/: test_app.py  test_completions.py  test_debug.py  test_discover.py  test_display.py  test_enforce.py  test_hive_cli.py  test_project.py  test_project_commands.py  test_project_discover.py  test_repl.py  test_resolve_project.py  test_session.py  test_sprint_cli.py  test_task.py  test_task_project_flag.py
tests/coordination/: test_announcements.py  test_board.py  test_decisions.py  test_questions.py
tests/core/: test_agent_registry.py  test_config.py  test_discover_projects.py  test_discovery.py  test_discovery_converter.py  test_estimation.py  test_hive_config.py  test_migration.py  test_models.py  test_project.py  test_project_external.py  test_project_registry.py  test_render_to_string.py  test_secret_settings.py  test_session.py  test_sprint.py  test_task.py  test_templates.py  test_typescript_template.py  test_workspace.py
tests/debugging/: conftest.py  test_collect_result.py  test_config.py  test_loader.py  test_models.py  test_pipeline.py  test_protocol.py
tests/enforcement/: test_ci.py  test_editor_config.py  test_engine.py  test_guardrails.py  test_metrics.py  test_precommit.py  test_protected.py  test_quality_gates.py
tests/monitoring/: test_deploy_status.py  test_failure_patterns.py  test_health_checker.py  test_render_registry.py
tests/orchestration/: test_agent_invoker.py  test_circuit_breaker.py  test_daemon.py  test_debugging_hooks.py  test_dispatcher.py  test_hive.py  test_hive_integration.py  test_hive_spawn.py  test_hooks.py  test_objective_builder.py  test_resource_broker.py  test_scheduler.py  test_triggers.py  test_usage.py  test_usage_limits.py
tests/reporting/: test_cycle_reports.py  test_daily_summary.py  test_decision_log.py  test_quality.py  test_velocity.py
tests/uat/: test_batch.py  test_feedback.py  test_memory.py  test_optimization.py  test_pipeline.py  test_reporter.py  test_spec_engine.py  test_spec_index.py  test_task_context.py  test_test_executor.py  test_test_generator.py  (+2 more)
(+139 files in other folders)
