[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autopilot-cli"
version = "1.0.0"
description = "Autonomous multi-agent development orchestrator — task management, anti-pattern enforcement, hive-mind coordination, and interactive REPL from the terminal."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["cli", "automation", "orchestration", "multi-agent", "development", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "typer>=0.15",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/mandelbro/autopilot-cli"
Repository = "https://github.com/mandelbro/autopilot-cli"
Issues = "https://github.com/mandelbro/autopilot-cli/issues"
Changelog = "https://github.com/mandelbro/autopilot-cli/blob/main/CHANGELOG.md"

[project.scripts]
autopilot = "autopilot.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.4",
    "ruff>=0.9",
    "pyright>=1.1",
    "pre-commit>=3.0",
]

[tool.hatch.build.targets.sdist]
exclude = [".claude/", ".autopilot/"]

[tool.hatch.build.targets.wheel]
packages = ["src/autopilot"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["autopilot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportUnusedFunction = false
include = ["src"]
exclude = ["tests"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
